[metadata]
name = dunet
version = attr: dunet.__version__
author = TomJGooding
description = 
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/TomJGooding/dunet
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent

[options]
python_requires = >=3.7
package_dir =
    = src
packages = find:
install_requires =
    textual >= 0.28.1
    textual-html @ git+https://github.com/TomJGooding/textual-html.git@main

[options.packages.find]
where = src

[options.package_data]
dunet = py.typed

[options.extras_require]
dev =
    black
    flake8
    isort
    mypy
    pytest
    pytest-cov
    textual-dev
